external-crates/move/crates/move-compiler/tests/move_2024/parser/ability_modifier_invalid_infix_with_valid_postfix.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E01003]: invalid modifier
  ┌─ tests/move_2024/parser/ability_modifier_invalid_infix_with_valid_postfix.move:3:5
  │
3 │     struct Foo has {} has copy;
  │     ^^^^^^ Invalid struct declaration. Internal struct declarations are not yet supported
  │
  = Visibility annotations are required on struct declarations from the Move 2024 edition onwards.

error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/ability_modifier_invalid_infix_with_valid_postfix.move:3:20
  │
3 │     struct Foo has {} has copy;
  │                    ^ Unexpected '{'. Expected a type ability, one of: 'copy', 'drop', 'store', or 'key'
